--- a/nobels.html
+++ b/nobels.html
@@ -180,25 +180,69 @@
 					var laureateCountryCodeOfBirth = laureatesArray[i].bornCountryCode;
 					if (category == "all" && countryCode == 'all'){
 						if (prizeYearInt >= startYearInt && prizeYearInt <= endYearInt) {
-							matches.push(laureatesArray[i]);
-							break
+							// Prize winner match based on inputs
+							match = {};
+							match.id = laureatesArray[i].id;
+							match.gender = laureatesArray[i].gender;
+							match.firstname = laureatesArray[i].firstname;
+							match.surname = laureatesArray[i].surname;
+							match.prizeCategory = laureatesArray[i].prizes[j].category;
+							match.prizeYear = laureatesArray[i].prizes[j].year;
+							match.born = laureatesArray[i].born;
+							match.died = laureatesArray[i].died;
+							match.bornCity = laureatesArray[i].bornCity;
+							match.prizeMotivation = laureatesArray[i].prizes[j].motivation;
+							matches.push(match);
 						}
 					}
 					else if (category == "all"){
 						if (prizeYearInt >= startYearInt && prizeYearInt <= endYearInt && countryCode == laureateCountryCodeOfBirth) {
-							matches.push(laureatesArray[i]);
-							break
+							// Prize winner match based on inputs
+							match = {};
+							match.id = laureatesArray[i].id;
+							match.gender = laureatesArray[i].gender;
+							match.firstname = laureatesArray[i].firstname;
+							match.surname = laureatesArray[i].surname;
+							match.prizeCategory = laureatesArray[i].prizes[j].category;
+							match.prizeYear = laureatesArray[i].prizes[j].year;
+							match.born = laureatesArray[i].born;
+							match.died = laureatesArray[i].died;
+							match.bornCity = laureatesArray[i].bornCity;
+							match.prizeMotivation = laureatesArray[i].prizes[j].motivation;
+							matches.push(match);
 						}
 					}
 					else if (countryCode == "all"){
 						if (prizeYearInt >= startYearInt && prizeYearInt <= endYearInt && category == prizeCategory) {
-							matches.push(laureatesArray[i]);
-							break
+							// Prize winner match based on inputs
+							match = {};
+							match.id = laureatesArray[i].id;
+							match.gender = laureatesArray[i].gender;
+							match.firstname = laureatesArray[i].firstname;
+							match.surname = laureatesArray[i].surname;
+							match.prizeCategory = laureatesArray[i].prizes[j].category;
+							match.prizeYear = laureatesArray[i].prizes[j].year;
+							match.born = laureatesArray[i].born;
+							match.died = laureatesArray[i].died;
+							match.bornCity = laureatesArray[i].bornCity;
+							match.prizeMotivation = laureatesArray[i].prizes[j].motivation;
+							matches.push(match);
 						} 
 					}
 					else if (prizeYearInt >= startYearInt && prizeYearInt <= endYearInt && category == prizeCategory && countryCode == laureateCountryCodeOfBirth) {
-						matches.push(laureatesArray[i]);
-						break
+						// Prize winner match based on inputs
+						match = {};
+						match.id = laureatesArray[i].id;
+						match.gender = laureatesArray[i].gender;
+						match.firstname = laureatesArray[i].firstname;
+						match.surname = laureatesArray[i].surname;
+						match.prizeCategory = laureatesArray[i].prizes[j].category;
+						match.prizeYear = laureatesArray[i].prizes[j].year;
+						match.born = laureatesArray[i].born;
+						match.died = laureatesArray[i].died;
+						match.bornCity = laureatesArray[i].bornCity;
+						match.prizeMotivation = laureatesArray[i].prizes[j].motivation;
+						matches.push(match);
 					}
 				}
 			}
@@ -207,17 +251,16 @@
 			laureatesInfo += "<tr><th>Name</th><th>Category</th><th>Year of Award</th><th>Additional Info</th></tr>";
 						
 			for(var i = 0; i < matches.length; i++){
-				for(var j = 0; j < matches[i].prizes.length; j++){
-					laureatesInfo += "<tr class=\"" + matches[i].gender + "\">"
-					laureatesInfo += "<td>" + matches[i].firstname + " ";
-					if (matches[i].surname != null){
-						laureatesInfo += matches[i].surname + "</td>";
-					}
-					laureatesInfo += "<td>" + matches[i].prizes[j].category + "</td>";
-					laureatesInfo += "<td>" + matches[i].prizes[j].year + "</td>";
-					laureatesInfo += "<td><button id=\"info_button\" onclick=\"additionalInfo(" + matches[i].id + ")\"><span class=\"fas fa-info-circle\"></span></button></td></tr>";
+				laureatesInfo += "<tr class=\"" + matches[i].gender + "\">"
+				laureatesInfo += "<td>" + matches[i].firstname + " ";
+				if (matches[i].surname != null){
+					laureatesInfo += matches[i].surname + "</td>";
 				}
-    		}
+				laureatesInfo += "<td>" + matches[i].prizeCategory + "</td>";
+				laureatesInfo += "<td>" + matches[i].prizeYear + "</td>";
+				laureatesInfo += "<td><button id=\"info_button\" onclick=\"additionalInfo(" + matches[i].id + ")\"><span class=\"fas fa-info-circle\"></span></button></td></tr>";
+			}
+    		
 
     		laureatesInfo += "</table>"
     		document.getElementById("laureatesTable").innerHTML = laureatesInfo;
@@ -319,19 +362,10 @@
 			
 			// Get the data to display
 			additionalLaureateInfo = {}
-			console.log(matches)
 			for (var i = 0; i < matches.length; i++){
 				if (matches[i].id == laureate_id){
 					additionalLaureateInfo = matches[i]
 				}
-			}
-			
-			console.log(additionalLaureateInfo.born)
-			console.log(additionalLaureateInfo.died)
-			console.log(additionalLaureateInfo.bornCity)
-			
-			for (i = 0; i < additionalLaureateInfo.prizes.length; i++){
-				console.log(additionalLaureateInfo.prizes[i].motivation);
 			}
 			
 			// Display the modal
@@ -364,7 +398,7 @@
 			}
 			
 			modalContent += "<p class=\"additional-info-heading\">Motivation</p>";
-			modalContent += "<p>" + additionalLaureateInfo.prizes[0].motivation + "</p>";
+			modalContent += "<p>" + additionalLaureateInfo.prizeMotivation + "</p>";
 			
 			// Display the HTML in the inner modal
 			document.getElementById("modal-content").innerHTML = modalContent;
