--- a/nobels.html
+++ b/nobels.html
@@ -431,15 +431,23 @@
 					}
 				}
 			
-			// Display the HTML in the inner modal
-			document.getElementById("modal-content").innerHTML = modalContent;
-			
-			// When the user clicks on <span> (x), close the modal
-			span = document.getElementById("close");
-			
-			span.onclick = function() {
-				modal.style.display = "none";
-			}
+				// Display the HTML in the inner modal
+				document.getElementById("modal-content").innerHTML = modalContent;
+
+				// When the user clicks on <span> (x), close the modal
+				span = document.getElementById("close");
+
+				span.onclick = function() {
+					modal.style.display = "none";
+				}
+				
+				// Add an event listener so pressong escape key closes the modal
+				document.addEventListener('keydown', function(e) {
+					var keyCode = e.keyCode;
+					if (keyCode === 27) {
+						modal.style.display = "none";
+					}
+				});
 		    }
 		}
 		
